--- a/index.html
+++ b/index.html
@@ -176,18 +176,10 @@
         <h2>hey abdulla !</h2>
         <div class="letter-box" id="letterBox">
             <p class="greeting-letter"> 
-                Happy Birthday, my love.
-
-I should be there with you, holding your hand, looking into your eyes, whispering how much I love you. But instead, here I am, pouring my heart into words, hoping they reach you the way my touch would.
-
-Do you remember our school days? When love was effortless—just stolen glances and your voice always within reach. But now, every day without you feels like a countdown to the moment I get to see you again. I miss you in ways words will never be enough to explain. Your warmth, your voice without the crackle of a call, your presence that made everything feel right.
-
-I know you're there, chasing dreams, building our future, and I love you even more for it. But, my love, come home soon. Some love stories aren’t meant to be lived apart. And ours is one of them.
-
-I love you, Abdulla. Today and always.
-
-Forever yours,
-Janani
+                A day to be noted 🗓️ Wishing you a bouquet of happiness and love on your spcl day 🫶🏼 . At this day we have started talking eachother 😌 a very spcl day for me too 💓. I have hurted you alot by my words and sometimes I get hurted by you too🫠. It have been 5 years since I had start talking ✨. I never put this much effort on something... But I put my whole efforts on making you happy bcz your my everything 💯😌. I don't know how to wish but I wish the way I know . I'm here to care for you;
+I'm here to pamper you; I'm here to give my all love to you..😇🥰
+No one will love you the way I loved 😌😊.Want to see you as a successful man ❤️💯.
+I felt happy when I'm being with you 🥰. I have no idea about how I get attached this much to you 💗 🫧. A man with whom I can talk a little while without getting bored 😴. If you are in my side I can face all the obstacles without any fear 😌. Waiting to celebrate the special day together 🩷. I Know I'm not your dream girl but I try to be your dream girl 😚🎀. And thanks for accepting me and being with me after lots of misunderstanding and arguments 😌🫠. Love you as always 🫂💗😚. I will be always with you whatever happens 💯 and remember it I'm yours 🌝💕. See you soon my love. I hope 🤞🏼this letter reache your heart ❤️. Miss you badly 😶‍🌫️😪. Please understand that I will never love anyone as I loved you ❤️💯🫂
             </p>
         </div>
         <button id="readButton" onclick="revealLetter()">In ?</button>
