--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@
             box-shadow: 0 0 15px rgba(255, 0, 150, 0.8), 0 0 20px rgba(255, 0, 150, 0.5);
         }
 
+        @media (max-width: 600px) {
+            button {
+                font-size: 14px;
+                padding: 10px 15px;
+            }
+        }
+
+
         @keyframes fallAndDisappear {
             0% {
                 transform: translateY(0);
