--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rith....</title>
     <style>
-        @import url("https://fonts.googleapis.com/css2?family=Great+Vibes&family=Dancing+Script&display=swap");
-        @import url("https://fonts.googleapis.com/css2?family=Allura&display=swap");
+        @import <link rel="preconnect" href="https://fonts.googleapis.com">
+        @import <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        @import <link href="https://fonts.googleapis.com/css2?family=Allura&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
         
-        body {
-            font-family: 'Great Vibes', cursive;
+        
+        .body{
+            .allura-regular {
+            font-family: "Allura", cursive;  
+            font-weight: 400;
+            font-style: normal;
             background-color: black;
             display: flex;
             justify-content: center;
@@ -96,7 +101,7 @@
 
 
         .greeting-letter {
-            font-family: 'Great Vibes', cursive;
+            font-family: 'Allura', cursive;
             font-size: 20px;
             line-height: 1.8;
             color: white;
