--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>rith....</title>
+     <title>AbdJan</title>
      <style>
          @import url("https://fonts.googleapis.com/css2?family=Great+Vibes&family=Dancing+Script&display=swap");
          @import url("https://fonts.googleapis.com/css2?family=Allura&display=swap");
@@ -13,11 +13,13 @@
              background-color: black;
              display: flex;
              justify-content: center;
-             align-items: center;
+             align-items: normal;
              height: 100vh;
-             margin: 0;
-             overflow: hidden;
+             margin: auto;
+             overflow: auto;
              position: relative;
+             overflow-y: auto;
+             -webkit-tap-highlight-color: transparent;
          }
  
          .dynamic-bg {
@@ -135,6 +137,7 @@
              cursor: pointer;
              font-family: 'Great Vibes', cursive;
              font-size: 16px;
+             z-index: 2;
              transition: background-color 0.05s ease, transform 0.05s ease, box-shadow 0.05s ease;
              box-shadow: 0 0 15px rgba(255, 0, 150, 0.8), 0 0 20px rgba(255, 0, 150, 0.5);
          }
